--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
-      <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" 
+    <div class="reference-info">
+      <img class="reference-info__image" src="./eisenhower-matrix.jpg">
+      <a class="reference-info__link" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+      <p id="top-Section-For-Adding-Element-To-List">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task"class="task" type="text">
@@ -19,7 +19,7 @@
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incompleteTasks">
+      <ul id="incomplete-Tasks">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
@@ -27,7 +27,7 @@
           <button class="edit">Edit</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
-        <li class="editMode">
+        <li class="edit-Mode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
