--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
       <a class="reference-info__link" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-Section-For-Adding-Element-To-List">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
+    <div class="wrapper">
+      <p id="add-todo">
+        <label for="add-todo__input">Add Item</label>
+        <div class="add-todo__wrapper">
+          <input id="add-todo__input" class="task" type="text">
           <button>Add</button>
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incomplete-Tasks">
+      <ul id="incomplete">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
@@ -27,7 +27,7 @@
           <button class="edit">Edit</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
-        <li class="edit-Mode">
+        <li class="edit">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
@@ -36,7 +36,7 @@
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
+      <ul id="completed">
         <li>
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
