--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
           <input type="checkbox">
           <label class="task">Pay Bills</label>
           <input type="text">
-          <button class="edit">Edit</button>
+          <button class="edit-bnt">Edit</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
         <li class="edit">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
+          <button class="edit-bnt">Save</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
       </ul>
@@ -41,7 +41,7 @@
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
-          <button class="edit">Edit</button>
+          <button class="edit-bnt">Edit</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
       </ul>
