fix: fix edit button text with classes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <button class="edit-bnt">Edit</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
-        <li class="edit">
+        <li class="edit-mode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
