--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head><title>Todo App</title>
+  <head>
+    <title>Todo App</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" >
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="reference-info">
+    <aside class="reference-info">
       <img class="reference-info__image" src="./eisenhower-matrix.jpg">
       <a class="reference-info__link" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="wrapper">
-      <p id="add-todo">
+    </aside>
+    <article class="wrapper">
+      <section id="add-todo">
         <label for="add-todo__input">Add Item</label>
         <div class="add-todo__wrapper">
           <input id="add-todo__input" class="task" type="text">
           <button>Add</button>
         </div>
-      </p>
+      </section>
       <h3>Todo</h3>
       <ul id="incomplete">
         <li>
@@ -45,7 +46,7 @@
           <button class="delete"><img src="./remove.svg"></button>
         </li>
       </ul>
-    </div>
+    </article>
     <script src="app.js"></script>
   </body>
 </html>
