--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <aside class="reference-info">
-      <img class="reference-info__image" src="./eisenhower-matrix.jpg">
+      <img class="reference-info__image" src="./eisenhower-matrix.jpg" alt="The eisenhower matrix">
       <a class="reference-info__link" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </aside>
