--- a/index.html
+++ b/index.html
@@ -13,37 +13,37 @@
     </aside>
     <article class="wrapper">
       <section id="add-todo">
-        <label for="add-todo__input">Add Item</label>
+        <label for="new-task-input">Add Item</label>
         <div class="add-todo__wrapper">
-          <input id="add-todo__input" class="task" type="text">
-          <button>Add</button>
+          <input id="new-task-input" class="add-todo__input" type="text">
+          <button class="btn">Add</button>
         </div>
       </section>
       <h3>Todo</h3>
       <ul id="incomplete">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
+        <li class="task">
+          <input class="task__checkbox" type="checkbox">
+          <label class="task__text">Pay Bills</label>
           <input type="text">
-          <button class="edit-bnt">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="btn btn_edit">Edit</button>
+          <button class="btn btn_delete"><img src="./remove.svg"></button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit-bnt">Save</button>
-          <button class="delete"><img src="./remove.svg"></button>
+        <li class="task edit-mode">
+          <input class="task__checkbox" type="checkbox">
+          <label class="task__text">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task__text">
+          <button class="btn btn_edit">Save</button>
+          <button class="btn btn_delete"><img src="./remove.svg"></button>
         </li>
       </ul>
       <h3>Completed</h3>
       <ul id="completed">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit-bnt">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+        <li class="task">
+          <input class="task__checkbox" type="checkbox" checked>
+          <label class="task__text">See the Doctor</label>
+          <input type="text" class="task__text">
+          <button class="btn btn_edit">Edit</button>
+          <button class="btn btn_delete"><img src="./remove.svg"></button>
         </li>
       </ul>
     </article>
