--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
           <label class="task__text">Pay Bills</label>
           <input type="text">
           <button class="btn btn_edit">Edit</button>
-          <button class="btn btn_delete"><img src="./remove.svg"></button>
+          <button class="btn btn_delete"><img src="./remove.svg" alt="remove icon"></button>
         </li>
         <li class="task edit-mode">
           <input class="task__checkbox" type="checkbox">
           <label class="task__text">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task__text">
           <button class="btn btn_edit">Save</button>
-          <button class="btn btn_delete"><img src="./remove.svg"></button>
+          <button class="btn btn_delete"><img src="./remove.svg" alt="remove icon"></button>
         </li>
       </ul>
       <h3>Completed</h3>
@@ -43,7 +43,7 @@
           <label class="task__text">See the Doctor</label>
           <input type="text" class="task__text">
           <button class="btn btn_edit">Edit</button>
-          <button class="btn btn_delete"><img src="./remove.svg"></button>
+          <button class="btn btn_delete"><img src="./remove.svg" alt="remove icon"></button>
         </li>
       </ul>
     </article>
